--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8" />
+    <link href='https://fonts.googleapis.com/css?family=Happy Monkey' rel='stylesheet'>
  </head>
   <body>
     <div id="root"></div>
